ui/src/app/components/headers/headers.component.scss
ion-title {
  color: var(--ion-color-warning-contrast);
  background-color: var(--ion-color-primary-contrast);
  text-align: center;
  font: {
    size: 2em;
    weight: bold;
  }
}

ion-content {
  ion-toolbar {
    display: flex;
    --background: translucent;
    .bt {
      display: none;
    }
  }
}
ion-button {
  display: none;
}
.sidebar {
   display: none;
}

@media only screen and (max-width: 959px) {
  ion-button {
    display: block;
  }
  .sidebar {
    display: block;
  }
  ion-title {
    span {
      margin-left: -1em;
    }
  }
}

